# aurora-uplift-vst2

./: .gitignore  CMakeLists.txt  INSTALAR-NO-FL-STUDIO.md  LICENSE-PROJECT.txt  NOTICE-DPF.txt  README.md
.github/workflows/: build-vst2.yml
Source/: AuroraUpliftPlugin.cpp  DistrhoPluginInfo.h
tools/: validate_project.py
